# connect4players

./: CMakeLists.txt  Jenkinsfile  Player.h  PlayerRegistry.cpp  PlayerRegistry.h  README.md
jklepp_ExamplePlayer/: ExamplePlayer.cpp  ExamplePlayer.h
jklepp_ForcedOrGaussPlayer/: ForcedOrGaussPlayer.cpp  ForcedOrGaussPlayer.h
